# mlops

./: .gitignore  README.md  mlop.code-workspace
airflow/helm/: airflow-ray-role.yaml  install.sh  pvc.yaml  values.yaml
docs/: helm-kustomize-deployment-guide.md
kuberay/: ray-cluster.yaml  requirements.txt
kuberay/helm/: install.sh
kuberay/llm/: inference.py  train_local_cpu.py  (+2 more)
lora/: .dockerignore  Dockerfile  Makefile  README.md  config.properties  config.properties.example  config.py  guide.md  helper.py  main.py  pyproject.toml  requirements.txt  senarino.txt  task_01_data_analysis.py  task_02_data_validation.py  task_03_train.py  task_03_train_local.py  task_03_train_local_mflow.py  task_03_train_m.py  task_04_evaluate.py  task_05_smoke_test.py
minio/: Makefile
taxi/: Makefile
trainings/llama-lora/: Dockerfile  README.md  config-dev.properties  config-local.properties  config.properties  pyproject.toml  requirements.txt
trainings/llama-lora/airflow/dags/: training_pipeline.py
trainings/llama-lora/docs/: refactoring.md  senario.txt
trainings/llama-lora/src/: __init__.py
trainings/llama-lora/src/cli/: run_analysis.py  run_pipeline.py  run_promote.py
trainings/llama-lora/src/common/: config.py  exceptions.py  logging.py
trainings/llama-lora/src/data/: analysis.py  seed_data.py  validation_data.py
trainings/llama-lora/src/training/: __init__.py  evaluate.py  promote.py  train.py
trainings/llama-lora/src/wrappers/: airflow_analysis.py  airflow_eval.py  airflow_seed.py
trainings/llama-lora/tests/: test_seed_validation_repair.py
(+128 files in other folders)
