[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-pipeline"
version = "0.1.0"
description = "MLOps LoRA pipeline with src layout"
requires-python = ">=3.12"
dependencies = [
  "ray[client,train]==2.55.1",
  "transformers>=4.40.0",
  "datasets>=2.18.0",
  "peft>=0.10.0",
  "huggingface_hub>=0.22.0",
  "boto3>=1.34.0",
  "torch>=2.2.0",
  "torchvision",
  "mlflow>=2.13.0",
  "accelerate>=0.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "apache-airflow-providers-cncf-kubernetes==10.17.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
